Final steps - fix layout problem, add hover state

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,9 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  padding: 0 40px;
   width: 100%;
   height: 100%;
-  background: url("./assets/img/Background.png") center center repeat;
+  background: url("./assets/img/Background.png") repeat;
 }
 
 .cat-food {
