--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -1,12 +1,12 @@
 .cat-food__card {
-  flex: 0 1 320px;
+  flex: 0 0 33.3334%;
   padding: 0 40px;
 }
 
 .cat-card-wrapper {
   position: relative;
   clip-path: polygon(48px 0, 100% 0, 100% 100%, 0 100%, 0 48px);
-  width: 328px;
+  width: 320px;
   height: 480px;
   border-radius: 5px;
   margin-bottom: 20px;
@@ -23,6 +23,19 @@
       background-color: $colorRedHover;
     }
   }
+  &--disabled {
+    background: $colorDisabled;
+    pointer-events: none;
+  }
+
+  &:hover {
+    & .weight-circle--blue {
+      background-color: $colorBlueHover;
+    }
+    &:hover .weight-circle--red {
+      background-color: $colorRedHover;
+    }
+  }
 }
 
 .cat-card {
@@ -31,7 +44,7 @@
   left: 4px;
   clip-path: polygon(48px 0, 100% 0, 100% 100%, 0 100%, 0 48px);
   background: url("../../assets/img/cat.png") center 208px no-repeat;
-  width: 320px;
+  width: 312px;
   height: 472px;
   background-color: $colorWhite;
   padding-left: 46px;
@@ -39,17 +52,15 @@
   cursor: pointer;
   transition: all 0.3s;
 
-  &:hover .weight-circle--blue {
-    background-color: $colorBlueHover;
-  }
-
-  &:hover .weight-circle--red {
-    background-color: $colorRedHover;
-  }
-
   &--disabled {
-    pointer-events: none;
+    position: absolute;
+    background-color: $colorWhite;
     opacity: 50%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
   }
 
   &__upper {
@@ -57,6 +68,9 @@
     padding-top: 25px;
     margin-bottom: 17px;
     color: $colorGrey;
+    &--red {
+      color: $colorRed;
+    }
   }
 
   &__heading {
@@ -84,12 +98,12 @@
     }
   }
   &__link {
+    cursor: pointer;
     color: $colorBlue;
-    &--dashed {
-      border-bottom: 1px dashed $colorBlue;
-      &:hover {
-        color: $colorBlueHover;
-      }
+    border-bottom: 1px dashed $colorBlue;
+    transition: all 0.3s;
+    &:hover {
+      color: $colorBlueHover;
     }
   }
   &__weight {
@@ -111,6 +125,10 @@
     background-color: $colorRed;
   }
 
+  &--disabled {
+    background-color: $colorDisabled;
+  }
+
   &__price {
     position: absolute;
     top: 50%;
@@ -126,11 +144,8 @@
   }
 }
 
-@media screen and (max-width: 1250px) {
+@media (max-width: 1200px) {
   .cat-food__card {
-    padding: 0 40px 50px 40px;
-    &:last-child {
-      padding: 0 40px 0px 40px;
-    }
+    margin-bottom: 50px;
   }
 }
