--- a/src/style.scss
+++ b/src/style.scss
@@ -17,8 +17,9 @@ code {
 }
 
 ._container {
-  max-width: 1280px;
+  max-width: 1200px;
   margin: 0 auto;
+  padding: 0 40px;
 }
 
 @import "./App";
